--- a/index.html
+++ b/index.html
@@ -144,14 +144,16 @@
         <div class="container mx-auto px-4 relative z-10">
           <div class="max-w-3xl">
             <h1 class="text-5xl font-bold mb-6 text-white animate-fade-in">
-              Bridging Global Markets with
+              Global Import Export Solutions: Bridging Markets with
               <span class="text-orange-500 animate-text-highlight"
                 >Quality Products</span
               >
             </h1>
             <p class="text-xl text-gray-100 mb-8 animate-slide-up">
-              We are a leading import-export company connecting Bangladesh with
-              global markets through quality products and reliable services.
+              Your trusted partner in international trade and logistics. We
+              specialize in import-export services, customs clearance, and
+              global supply chain solutions, connecting Bangladesh with
+              worldwide markets.
             </p>
             <div class="flex gap-4 animate-fade-in-up">
               <a
@@ -535,6 +537,77 @@
               <p class="text-gray-600">
                 We export products to various countries to meet the needs of our
                 clients.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Testimonials Section -->
+      <section class="py-20 bg-white">
+        <div class="container mx-auto px-4">
+          <div class="text-center mb-16">
+            <span
+              class="text-orange-500 font-medium tracking-wider uppercase text-sm block mb-4"
+              >What Our Clients Say</span
+            >
+            <h2 class="text-4xl font-bold text-gray-800">
+              Client Testimonials
+            </h2>
+          </div>
+          <div class="grid md:grid-cols-3 gap-8">
+            <div
+              class="bg-gray-50 p-8 rounded-lg shadow-md hover:shadow-xl transition-all"
+            >
+              <div class="flex items-center mb-4">
+                <div class="text-orange-500 text-4xl mr-4">
+                  <i class="fas fa-quote-left"></i>
+                </div>
+                <div>
+                  <h4 class="font-bold">John Smith</h4>
+                  <p class="text-gray-600">CEO, Global Foods Ltd</p>
+                </div>
+              </div>
+              <p class="text-gray-600">
+                "K.H. Infinity has been instrumental in our success. Their
+                efficient import services and attention to detail are
+                unmatched."
+              </p>
+            </div>
+            <div
+              class="bg-gray-50 p-8 rounded-lg shadow-md hover:shadow-xl transition-all"
+            >
+              <div class="flex items-center mb-4">
+                <div class="text-orange-500 text-4xl mr-4">
+                  <i class="fas fa-quote-left"></i>
+                </div>
+                <div>
+                  <h4 class="font-bold">Sarah Johnson</h4>
+                  <p class="text-gray-600">
+                    Procurement Manager, Tech Solutions
+                  </p>
+                </div>
+              </div>
+              <p class="text-gray-600">
+                "Their expertise in customs clearance and documentation has made
+                our import process seamless and hassle-free."
+              </p>
+            </div>
+            <div
+              class="bg-gray-50 p-8 rounded-lg shadow-md hover:shadow-xl transition-all"
+            >
+              <div class="flex items-center mb-4">
+                <div class="text-orange-500 text-4xl mr-4">
+                  <i class="fas fa-quote-left"></i>
+                </div>
+                <div>
+                  <h4 class="font-bold">David Chen</h4>
+                  <p class="text-gray-600">Director, Asian Markets</p>
+                </div>
+              </div>
+              <p class="text-gray-600">
+                "Reliable, professional, and always delivering on time. K.H.
+                Infinity is our go-to partner for all export needs."
               </p>
             </div>
           </div>
