--- a/services.html
+++ b/services.html
@@ -145,89 +145,252 @@
       </div>
     </section>
 
-    <!-- Import Services -->
+    <!-- Services Section -->
     <section class="py-20">
       <div class="container mx-auto px-4">
-        <h2 class="text-3xl font-bold mb-12 text-gray-800">Import Services</h2>
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-          <!-- Product Sourcing -->
-          <div class="bg-white p-8 rounded-lg shadow-md">
-            <div class="text-orange-500 text-4xl mb-4">
-              <i class="fas fa-search"></i>
-            </div>
-            <h3 class="text-xl font-bold mb-4">Product Sourcing</h3>
-            <p class="text-gray-600">
-              We identify and partner with trusted suppliers worldwide to source
-              high-quality products that meet your specific requirements.
-            </p>
-          </div>
+        <div class="text-center mb-16">
+          <h2 class="text-4xl font-bold text-gray-800 mb-4">Our Services</h2>
+          <p class="text-xl text-gray-600">
+            Comprehensive Import-Export Solutions for Your Business
+          </p>
+        </div>
 
-          <!-- Quality Assurance -->
-          <div class="bg-white p-8 rounded-lg shadow-md">
-            <div class="text-orange-500 text-4xl mb-4">
-              <i class="fas fa-certificate"></i>
+        <!-- Import Services -->
+        <div class="mb-20">
+          <h3 class="text-3xl font-bold mb-8">Import Services</h3>
+          <div class="grid md:grid-cols-3 gap-8">
+            <div
+              class="bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-all"
+            >
+              <div class="text-orange-500 text-4xl mb-4">
+                <i class="fas fa-ship"></i>
+              </div>
+              <h4 class="text-xl font-bold mb-4">Global Sourcing</h4>
+              <p class="text-gray-600 mb-4">
+                Access our extensive network of verified suppliers across Asia,
+                Europe, and the Americas. We handle everything from supplier
+                verification to quality control.
+              </p>
+              <ul class="text-gray-600 space-y-2">
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Supplier
+                  verification
+                </li>
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Quality
+                  inspection
+                </li>
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Price
+                  negotiation
+                </li>
+              </ul>
             </div>
-            <h3 class="text-xl font-bold mb-4">Quality Assurance</h3>
-            <p class="text-gray-600">
-              Rigorous quality control processes ensure all imported products
-              meet international standards and specifications.
-            </p>
-          </div>
 
-          <!-- Documentation -->
-          <div class="bg-white p-8 rounded-lg shadow-md">
-            <div class="text-orange-500 text-4xl mb-4">
-              <i class="fas fa-file-alt"></i>
+            <div
+              class="bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-all"
+            >
+              <div class="text-orange-500 text-4xl mb-4">
+                <i class="fas fa-file-contract"></i>
+              </div>
+              <h4 class="text-xl font-bold mb-4">Documentation & Compliance</h4>
+              <p class="text-gray-600 mb-4">
+                Expert handling of all import documentation and compliance
+                requirements, ensuring smooth customs clearance.
+              </p>
+              <ul class="text-gray-600 space-y-2">
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Import
+                  licenses
+                </li>
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Customs
+                  documentation
+                </li>
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Regulatory
+                  compliance
+                </li>
+              </ul>
             </div>
-            <h3 class="text-xl font-bold mb-4">Documentation Support</h3>
-            <p class="text-gray-600">
-              Complete assistance with import documentation, ensuring smooth
-              customs clearance and compliance.
-            </p>
+
+            <div
+              class="bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-all"
+            >
+              <div class="text-orange-500 text-4xl mb-4">
+                <i class="fas fa-truck"></i>
+              </div>
+              <h4 class="text-xl font-bold mb-4">Logistics Management</h4>
+              <p class="text-gray-600 mb-4">
+                End-to-end logistics solutions including transportation,
+                warehousing, and last-mile delivery.
+              </p>
+              <ul class="text-gray-600 space-y-2">
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Freight
+                  forwarding
+                </li>
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Warehousing
+                </li>
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Distribution
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
 
-    <!-- Export Services -->
-    <section class="py-20 bg-gray-50">
-      <div class="container mx-auto px-4">
-        <h2 class="text-3xl font-bold mb-12 text-gray-800">Export Services</h2>
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-          <!-- Market Access -->
-          <div class="bg-white p-8 rounded-lg shadow-md">
-            <div class="text-orange-500 text-4xl mb-4">
-              <i class="fas fa-globe"></i>
+        <!-- Export Services -->
+        <div class="mb-20">
+          <h3 class="text-3xl font-bold mb-8">Export Services</h3>
+          <div class="grid md:grid-cols-3 gap-8">
+            <div
+              class="bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-all"
+            >
+              <div class="text-orange-500 text-4xl mb-4">
+                <i class="fas fa-globe"></i>
+              </div>
+              <h4 class="text-xl font-bold mb-4">Market Access</h4>
+              <p class="text-gray-600 mb-4">
+                Connect with international buyers and expand your market reach
+                through our established network.
+              </p>
+              <ul class="text-gray-600 space-y-2">
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Market
+                  research
+                </li>
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Buyer
+                  connections
+                </li>
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Trade shows
+                </li>
+              </ul>
             </div>
-            <h3 class="text-xl font-bold mb-4">Market Access</h3>
-            <p class="text-gray-600">
-              Connect with international buyers and access new markets for
-              Bangladeshi products through our global network.
-            </p>
+
+            <div
+              class="bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-all"
+            >
+              <div class="text-orange-500 text-4xl mb-4">
+                <i class="fas fa-box"></i>
+              </div>
+              <h4 class="text-xl font-bold mb-4">Product Preparation</h4>
+              <p class="text-gray-600 mb-4">
+                Complete product preparation services meeting international
+                standards and requirements.
+              </p>
+              <ul class="text-gray-600 space-y-2">
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Quality
+                  control
+                </li>
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Packaging
+                </li>
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Labeling
+                </li>
+              </ul>
+            </div>
+
+            <div
+              class="bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-all"
+            >
+              <div class="text-orange-500 text-4xl mb-4">
+                <i class="fas fa-handshake"></i>
+              </div>
+              <h4 class="text-xl font-bold mb-4">Trade Finance</h4>
+              <p class="text-gray-600 mb-4">
+                Flexible trade finance solutions to support your export
+                operations.
+              </p>
+              <ul class="text-gray-600 space-y-2">
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Letter of
+                  credit
+                </li>
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Export
+                  financing
+                </li>
+                <li>
+                  <i class="fas fa-check text-orange-500 mr-2"></i>Risk
+                  management
+                </li>
+              </ul>
+            </div>
           </div>
+        </div>
 
-          <!-- Export Compliance -->
-          <div class="bg-white p-8 rounded-lg shadow-md">
-            <div class="text-orange-500 text-4xl mb-4">
-              <i class="fas fa-shield-alt"></i>
+        <!-- Global Network -->
+        <div class="bg-gray-50 p-8 rounded-lg">
+          <h3 class="text-3xl font-bold mb-8">Our Global Network</h3>
+          <div class="grid md:grid-cols-2 gap-8">
+            <div>
+              <h4 class="text-xl font-bold mb-4">Regions We Serve</h4>
+              <div class="grid grid-cols-2 gap-4">
+                <ul class="text-gray-600 space-y-2">
+                  <li>
+                    <i class="fas fa-map-marker-alt text-orange-500 mr-2"></i
+                    >South Asia
+                  </li>
+                  <li>
+                    <i class="fas fa-map-marker-alt text-orange-500 mr-2"></i
+                    >Southeast Asia
+                  </li>
+                  <li>
+                    <i class="fas fa-map-marker-alt text-orange-500 mr-2"></i
+                    >Middle East
+                  </li>
+                  <li>
+                    <i class="fas fa-map-marker-alt text-orange-500 mr-2"></i
+                    >Europe
+                  </li>
+                </ul>
+                <ul class="text-gray-600 space-y-2">
+                  <li>
+                    <i class="fas fa-map-marker-alt text-orange-500 mr-2"></i
+                    >North America
+                  </li>
+                  <li>
+                    <i class="fas fa-map-marker-alt text-orange-500 mr-2"></i
+                    >Africa
+                  </li>
+                  <li>
+                    <i class="fas fa-map-marker-alt text-orange-500 mr-2"></i
+                    >Australia
+                  </li>
+                  <li>
+                    <i class="fas fa-map-marker-alt text-orange-500 mr-2"></i
+                    >East Asia
+                  </li>
+                </ul>
+              </div>
             </div>
-            <h3 class="text-xl font-bold mb-4">Export Compliance</h3>
-            <p class="text-gray-600">
-              Expert guidance on export regulations and documentation to ensure
-              smooth international trade operations.
-            </p>
-          </div>
-
-          <!-- Quality Control -->
-          <div class="bg-white p-8 rounded-lg shadow-md">
-            <div class="text-orange-500 text-4xl mb-4">
-              <i class="fas fa-check-circle"></i>
+            <div>
+              <h4 class="text-xl font-bold mb-4">Key Ports & Facilities</h4>
+              <ul class="text-gray-600 space-y-2">
+                <li>
+                  <i class="fas fa-anchor text-orange-500 mr-2"></i>Chittagong
+                  Port, Bangladesh
+                </li>
+                <li>
+                  <i class="fas fa-warehouse text-orange-500 mr-2"></i>Modern
+                  Warehousing Facilities
+                </li>
+                <li>
+                  <i class="fas fa-truck-loading text-orange-500 mr-2"></i
+                  >Distribution Centers
+                </li>
+                <li>
+                  <i class="fas fa-building text-orange-500 mr-2"></i>Regional
+                  Offices
+                </li>
+              </ul>
             </div>
-            <h3 class="text-xl font-bold mb-4">Quality Control</h3>
-            <p class="text-gray-600">
-              Comprehensive quality checks and packaging standards to meet
-              international market requirements.
-            </p>
           </div>
         </div>
       </div>
