--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
     </section>
 
     <!-- Team Section -->
-    <section class="bg-gray-50 py-16">
+    <!-- <section class="bg-gray-50 py-16">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold mb-12 text-center">
           Our Leadership Team
@@ -205,7 +205,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <div id="footer"></div>
